--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </ul>
         <button type="button">Order Now</button>
       </section>
+      <section></section>
     </main>
   </body>
 </html>
