--- a/index.html
+++ b/index.html
@@ -61,7 +61,90 @@
         </ul>
         <button type="button">Order Now</button>
       </section>
-      <section></section>
+      <section>
+        <h2>Some of Our Favorites</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <ul>
+          <li><img src="./images/gamburger1.jpg" alt="" /></li>
+          <li><img src="./images/Pasta1.jpg" alt="" /></li>
+          <li><img src="./images/pizza1.jpg" alt="" /></li>
+          <li><img src="./images/chicken1.jpg" alt="" /></li>
+          <li><img src="./images/salat1.jpg" alt="" /></li>
+          <li><img src="./images/borshch1.jpg" alt="" /></li>
+        </ul>
+      </section>
+      <section>
+        <h2>What our Customers Say</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <ul>
+          <li>
+            <strong
+              >“The Best app I have used to order food in a while, so many
+              options to choose from too, I would recommend to a freind, No
+              questions asked”
+            </strong>
+            <img src="./images/Ellipse9.png" alt="" />
+            <h3>Sumith Shah</h3>
+            <p>Some Dude</p>
+          </li>
+          <li>
+            <strong
+              >“The ease with which I can just go in and order what i want was
+              amazing, It has been a very pleasant experience ordering from this
+              app”
+            </strong>
+            <img src="./images/Ellipse10.png" alt="" />
+            <h3>Sumith Shah</h3>
+            <p>Some Dude</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Subscribe To Get Special Offers</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+          varius enim in eros elementum tristique.
+        </p>
+        <form>
+          <label>
+            <input type="email" name="email" placeholder="Enter your email" />
+          </label>
+          <button type="button">Subscribe</button>
+        </form>
+        <img src="./images/banan-min.png" alt="" />
+      </section>
     </main>
+    <footer>
+      <a href="./index.html">
+        <img src="./images/vector.jpg" alt="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Menu</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+
+      <form>
+        <label>
+          <p>Subscribe</p>
+          <input type="email" name="email" placeholder="Enter your email" />
+          <button type="button">Subscribe</button>
+          <p>
+            By subscribing you agree to with our
+            <a href="">Privacy Policy</a>
+          </p>
+        </label>
+      </form>
+      <ul>
+        <li><a href="">Privacy Policy</a></li>
+        <li><a href="">Terms of Service</a></li>
+        <li><a href="">Cookies Settings</a></li>
+      </ul>
+      <p>2022 FoodSta. All right reserved.</p>
+    </footer>
   </body>
 </html>
